# phoneangel

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
frontend/src/: App.tsx  index.css
scripts/: setup_gradient.sh
src/phoneangel/: app.py  config.py
src/phoneangel/agents/: coach_agent.py  gradient_client.py  prep_agent.py  proxy_agent.py
src/phoneangel/api/: routes.py
src/phoneangel/knowledge_base/: phone_scripts.md
src/phoneangel/models/: database.py  schemas.py
